//
// This is the request and response for reaching replication
//

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.replication";
option java_outer_classname = "ConsensusProto";
option objc_class_prefix = "CSS";

package replication;

import "transprocessing.proto";

service Replication {
    // Register the replication service on this host to other replicas
    rpc handShaking(LocalIdentity) returns (Welcome) {}

    // request a vote for becoming the leader
    rpc electLeader (RequestToPrepare) returns (ReplyOfPrepared) {}

    // Sends a request to seek replication
    rpc proposeValue (ValueProposed) returns (ValueAccepted) {}
}

message LocalIdentity {
    string localhostIp = 1;
    int32  listeningPort = 2;
}


message Welcome {
    string replyingHostIp = 1;
    string welcome2JoinMessage = 2;
}

message Peer {
    string hostIp = 1;
    int32  port = 2;
    int64 lastHeard = 3;
    bool  isLeader = 4;
}

message PeerList {
    repeated Peer peer = 1;
}

message RequestToPrepare {
    int64 sequenceId = 1;
    string candidate = 2;
}

message AlreadyAccepted {
    int64 highestSeenSequenceId = 1;
    string acceptedCandidate = 2;
}

message ReplyOfPrepared {
    string voter = 1;
    AlreadyAccepted accepted = 2;
}

message ValueProposed {
    int32 logPosition = 1;
    transprocessing.Transaction trans = 2;
    string proposer = 3;
}

message ValueAccepted {
    int32 logPosition = 1;
    string acceptor = 2;
}

message LogItem {
    enum Type {
        INSERT = 0;
        UPDATE = 1;
        DELETE = 2;
    }
    Type type = 1;
    string key = 2;
    string value = 3;
}

message ReplicationLog {
    repeated transprocessing.Transaction transItem = 1;
}