//
// This is the service of data
//

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.transprocessing";
option java_outer_classname = "DatastoreProto";
option objc_class_prefix = "DST";

package transprocessing;

service TransactionProcessing {
    rpc submitTransaction (Transaction) returns (ProcessingResult) {}
}

message KV {
    string key = 1;
    string value = 2;
}

message Operation {
    enum Type {
        READ = 0;
        WRITE = 1;
        READWRITE = 2;
    }
    Type      type = 1;
    KV        kvPair = 2;
}

message Datastore {
    repeated KV k_v = 1;
}

message Transaction {
    string transactionID = 1;
    string submissionTime = 2;
    repeated Operation operation = 3;
}

message Lock {
    string key = 1;
    Operation.Type type = 2;
    string transactionID = 3;
}

message OperationExecution {
    Operation.Type type = 1;
    string key = 2;
    string value = 3;
}

message ProcessingResult {
    string transactionID = 1;
    enum Type {
        COMMIT = 0;
        ABORT = 1;
        UNEXPECTED = 2;
    }
    Type resultType = 2;
    string resultMessage = 3;
    repeated OperationExecution operExec = 4;
}